fix: removing side menu items tooltip on mobile

--- a/src/navigation/SideNavigation.css
+++ b/src/navigation/SideNavigation.css
@@ -77,6 +77,12 @@
     font-weight: 500;
 }
 
+/* disabling items tooltip on mobile */
+
+.ant-menu-inline-collapsed-tooltip {
+    display: none !important;
+}
+
 /* styling language selection menu item */
 
 #side-navigation-container .side-navigation-language-selection-container {
